# IPK-Projekt-1

./: CMakeLists.txt  CMakeSettings.json  Client.cpp  Client.h  Common.h  IPK - Počítačové komunikace a sítě.txt  IPK.cpp  IPK.h  Packet.cpp  Packet.h  README.md  Response.cpp  Response.h  Server.cpp  Server.h
